--- a/public/about/index.html
+++ b/public/about/index.html
@@ -18,17 +18,8 @@
 
 <title>About - qslg154</title>
 
-<meta name="description" content="Hi, I am a secondary school student from Hong Kong that is interested in way too many fields, including but not limited to:
-
-Contract bridge
-Drawing
-Playing instruments (I am learning to play Dizi!)g
-Programming
-Reading
-Learning languages (日本語勉強中)
-And finally, Mathematics
-
-However, I don&rsquo;t really have much success in all the fields I mentioned, to the point that I can&rsquo;t even say I am a &ldquo;Jack of all trades&rdquo; as Jack at least worth 1 HCP (high card point) but I don&rsquo;t.">
+<meta name="description" content="Loves playing ctf (Crypto)
+I will add new details one day&hellip;..">
 
 
 
@@ -433,21 +424,8 @@ However, I don&rsquo;t really have much success in all the fields I mentioned, t
 </script>
 
         <div class="content e-content">
-            <p>Hi, I am a secondary school student from Hong Kong that is interested in <em>way</em> too many fields, including but not limited to:</p>
-<ul>
-<li>Contract bridge</li>
-<li>Drawing</li>
-<li>Playing instruments (I am learning to play Dizi!)g</li>
-<li>Programming</li>
-<li>Reading</li>
-<li>Learning languages (日本語勉強中)</li>
-<li>And finally, Mathematics</li>
-</ul>
-<p>However, I don&rsquo;t really have much success in all the fields I mentioned, to the point that I can&rsquo;t even say I am a &ldquo;Jack of all trades&rdquo; as Jack at least worth 1 HCP (high card point) but I don&rsquo;t.</p>
-<p>I am particularly interested in mathematics though, but it is <em>really really</em> difficult, and burnouts can be really frequent at some times.</p>
-<p>I have bad literacy skill to the point that I can&rsquo;t even write fluent sentence in my Chinese writing. Yes my Chinese sucks but I think Chinese is just a much more beautiful language than English. For example, 文言文 can encapsulate a lot of details in one sentence so poets/writers can be very creative for their writings. Though English is still more convinient and global in real life. I have been trying to pick up my Chinese skill by reading novels.</p>
-<p>Outside of all of that, I am also a <em>touhou</em> fan, though more on the music
-than the actual &lsquo;Gensoukyo&rsquo;. Nonetheless, getting to know touhou did changed my life by a lot. I have quite a lot of merchanise of the series tho. (inc. ふもふも！, they are so cute!)</p>
+            <p>Loves playing ctf (Crypto)</p>
+<p>I will add new details one day&hellip;..</p>
 
         </div>
 
