--- a/public/index.html
+++ b/public/index.html
@@ -380,7 +380,7 @@
 
     
         <div class="content post-summary p-summary">
-            <p>Played the ctf with the team <em>Grey Bricks</em>, and we solved all crypto, most are pretty standard tho unfortunately.</p>
+            <p>Played the ctf with the team <em>Grey Bricks</em>, and we solved all crypto, I also solved some rev and pwn challs.</p>
 <h2 id="schrödingers-encryption" >
 <div>
     <a href="#schr%c3%b6dingers-encryption">
